[workspace]
members = [
    "hessra-token-core",
    "hessra-identity-token",
    "hessra-cap-token",
]

resolver = "3"

[workspace.dependencies]
biscuit-auth = { version = "6.0", features = ["pem"] }
base64 = "0.22"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
hex = "0.4"
regex = "1"