[package]
name = "hessra-token-core"
version = "1.0.0"
edition = "2024"
license = "Apache-2.0"
authors = ["Jake Valentic <jake@hessra.net>"]
description = "Core utilities and types for Hessra token SDKs"
repository = "https://github.com/Hessra-Labs/hessra-tokens"
documentation = "https://docs.rs/hessra-token-core"
keywords = ["hessra", "authorization", "token", "core", "biscuit"]
categories = ["authentication", "api-bindings"]

[dependencies]
biscuit-auth = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }
regex = { workspace = true }
